--- a/fdcp-3-making_websites_interactive/fdcp-3d-buikd-a-diary-app/index.css
+++ b/fdcp-3-making_websites_interactive/fdcp-3d-buikd-a-diary-app/index.css
@@ -22,6 +22,21 @@ html, body {
     padding: 1em;
     border: unset;
     border-radius: 10px;
-    box-shadow: 5px 5px #000000;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.4);
     margin-bottom: 1em;
+}
+
+/*
+  - Go over to the index.html file and give the button a class of "button"
+  - Back in the index.css file, target the button using its class
+  - Give the button rounded edges using the border-radius property
+  - Use the padding property to add space between the button's text and its edges
+  - move the button to the right of the page
+*/
+
+.button {
+    border-radius: 10px;
+    padding: 0.8em;
+    text-align: right;
+    margin-left: 75%;
 }
