--- a/fdcp-4-css_and_javascript_fundamentals/fdcp-4a-css_fundamentals/style_5.css
+++ b/fdcp-4-css_and_javascript_fundamentals/fdcp-4a-css_fundamentals/style_5.css
@@ -2,7 +2,8 @@
     background: #000;
     color: white;
     width: 560px;
-    margin: 0 auto; 
+    margin: 0 auto;
+    padding: 50px; 
 }
 
 h1 {
@@ -14,5 +15,5 @@ p {
 }
 
 .links {
-    margin-top: 2em;
+    margin-top: 2.5em;
 }
