--- a/fdcp-4-css_and_javascript_fundamentals/fdcp-4a-css_fundamentals/style_5.css
+++ b/fdcp-4-css_and_javascript_fundamentals/fdcp-4a-css_fundamentals/style_5.css
@@ -6,6 +6,10 @@
     padding: 50px; 
 }
 
+h1, p {
+    margin: 0;
+}
+
 h1 {
     font-size: 24px;
 }
@@ -16,4 +20,5 @@ p {
 
 .links {
     margin-top: 2.5em;
+    margin-bottom: 0;
 }
