--- a/fdcp-4-css_and_javascript_fundamentals/fdcp-4a-css_fundamentals/style_5.css
+++ b/fdcp-4-css_and_javascript_fundamentals/fdcp-4a-css_fundamentals/style_5.css
@@ -1,3 +1,7 @@
+body {
+    font-family: sans-serif;
+}
+
 .card {
     background: #000;
     color: white;
@@ -7,7 +11,7 @@
 }
 
 h1, p {
-    margin: 0;
+    margin-top: 0;
 }
 
 h1 {
@@ -21,4 +25,8 @@ p {
 .links {
     margin-top: 2.5em;
     margin-bottom: 0;
+}
+
+.accent-color {
+    color: yellow;  
 }
