--- a/fdcp-4-css_and_javascript_fundamentals/fdcp-4a-css_fundamentals/style_5.css
+++ b/fdcp-4-css_and_javascript_fundamentals/fdcp-4a-css_fundamentals/style_5.css
@@ -28,5 +28,13 @@ p {
 }
 
 .accent-color {
-    color: yellow;  
+    color: #FFE600;  
+}
+
+a {
+    color: #FFE600;
+}
+
+a:hover, a:focus {
+    color: aqua;
 }
