--- a/fdcp-4-css_and_javascript_fundamentals/fdcp-4a-css_fundamentals/style_11.css
+++ b/fdcp-4-css_and_javascript_fundamentals/fdcp-4a-css_fundamentals/style_11.css
@@ -1,4 +1,52 @@
 body {
+    font-size: 16px;
+    font-family: sans-serif;
+}
+
+h1 {
+    font-size: 48px;
+    color: #2e7ad3;
+    text-align: center;
+    margin: 45px 0;
+}
+
+h2 {
+    font-size: 32px;
+    color: #104c90;
+    margin: 0 0 10px;
+}
+
+a {
+    color: #ff8000;
+    font-weight: bold;
+}
+
+a:hover, 
+a:focus {
+    color: #104c90;
+}
+
+.blog-post {
+    background: #f1f1f1;
+    width: 450px;
+    padding: 25px;
+    margin: 0 auto;
+}
+
+.read-more {
+    margin: 0;
+}
+
+
+img {
+    margin-bottom: 25px;
+    width: 100%;
+    max-height: 180px;
+}
+
+/* What I do
+
+body {
     font-family: sans-serif;
     margin-top: 0;
     max-width: 500px;
@@ -42,3 +90,5 @@ img {
     width: 100%;
     max-height: 180px;
 }
+
+*/
