--- a/fdcp-3-making_websites_interactive/fdcp-3d-buikd-a-diary-app/index.css
+++ b/fdcp-3-making_websites_interactive/fdcp-3d-buikd-a-diary-app/index.css
@@ -1,12 +1,9 @@
-/* 
-    From the body tag, move the content of our page away from the window edge
-    Give the body tag a font-family of ['Gill Sans', 'Gill Sans MT']
- */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap');
 
 html, body {
     margin: 1em;
     padding: 0;
-    font-family: 'Gill Sans', 'Gill Sans MT';
+    font-family: 'Montserrat', sans-serif;
     display: grid;
     justify-content: center;
 }
@@ -32,14 +29,6 @@ html, body {
     outline: none;
 }
 
-/*
-  - Go over to the index.html file and give the button a class of "button"
-  - Back in the index.css file, target the button using its class
-  - Give the button rounded edges using the border-radius property
-  - Use the padding property to add space between the button's text and its edges
-  - move the button to the right of the page
-*/
-
 #entryForm .button {
     border: unset;
     border-radius: 10px;
@@ -49,14 +38,6 @@ html, body {
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
 }
 
-/* 
-    - Give the entries section the background color, #16697A
-      (or any other color of your choice)
-    - Give it the text color, #EDE7E3
-      (if you used your own color, this should be something that is visible
-       on the background)
-    - Like we did before, give it rounded edges.
- */
 
  #entries {
      background: #16697A;
@@ -67,14 +48,7 @@ html, body {
      border: unset;
  }
 
-   /*
-    - Target the div for the display-entry buttons and give it a
-        bottom padding of 1em to separate it from the entry texts
-    - Target the display-entry buttons and give each of them a margin
-        of 0.2em to separate them from one another
-    - Use the hover pseudo-class to change the cursor on the
-        display-entry buttons to "pointer" whenever they are hovered on
- */
+
 
  .entries-nav {
      padding-bottom: 1em;
