--- a/fdcp-3-making_websites_interactive/fdcp-3d-buikd-a-diary-app/index.css
+++ b/fdcp-3-making_websites_interactive/fdcp-3d-buikd-a-diary-app/index.css
@@ -16,12 +16,13 @@ html, body {
 
 .entry-textbox {
     background-color: #FFA62B;
-    width: 20em;
+    width: 30em;
     height: 10em;
     padding: 1em;
     border: unset;
     border-radius: 10px;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.4);
+    margin: 0 auto;
     margin-bottom: 1em;
 }
 
@@ -44,7 +45,7 @@ html, body {
      color: #ede7e3;
      border-radius: 10px;
      padding: 0.5em;
-     max-width: 20em;
+     max-width: 30em;
      border: unset;
  }
 
