--- a/fdcp-3-making_websites_interactive/fdcp-3d-buikd-a-diary-app/index.css
+++ b/fdcp-3-making_websites_interactive/fdcp-3d-buikd-a-diary-app/index.css
@@ -9,13 +9,13 @@ html, body {
 }
 
 .title {
-    color: #16697A;
+    color: #3775a8;
     text-align: center;
     margin-bottom: 1em;
 }
 
 .entry-textbox {
-    background-color: #FFA62B;
+    background-color: #ffd140;
     width: 30em;
     height: 10em;
     padding: 1em;
@@ -35,21 +35,19 @@ html, body {
     border-radius: 10px;
     padding: 0.8em;
     text-align: right;
-    margin-left: 75%;
+    margin-left: 84%;
+    font-weight: bold;
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
 }
 
-
  #entries {
-     background: #16697A;
+     background: #3775a8;
      color: #ede7e3;
      border-radius: 10px;
      padding: 0.5em;
      max-width: 30em;
      border: unset;
  }
-
-
 
  .entries-nav {
      padding-bottom: 1em;
