--- a/fdcp-3-making_websites_interactive/fdcp-3d-buikd-a-diary-app/index.css
+++ b/fdcp-3-making_websites_interactive/fdcp-3d-buikd-a-diary-app/index.css
@@ -26,6 +26,11 @@ html, body {
     margin-bottom: 1em;
 }
 
+::placeholder {
+    font-family: sans-serif;
+    color: #000000;
+}
+
 .entry-textbox:focus {
     outline: none;
 }
@@ -40,7 +45,11 @@ html, body {
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
 }
 
- #entries {
+.button:focus {
+    border: unset;
+}
+
+#entries {
      background: #3775a8;
      color: #ede7e3;
      border-radius: 10px;
