--- a/Pages/fcc-tribute/style.css
+++ b/Pages/fcc-tribute/style.css
@@ -1,13 +1,41 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap');
+
 body {
     margin: 0;
     padding: 0;
 }
+
+html {
+    font-family: 'Montserrat', sans-serif;
+}
+
 header {
-    background-image: url("maigret-cover.jpg");
+    background-image: linear-gradient(313deg, rgba(86,104,91,0.2) 0%, rgba(122,156,166,0.2) 36%), url("maigret-cover.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     background-color: #839C9C;
     width: 100%;
     height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.hero {
+    background: linear-gradient(0deg, rgba(255,255,255,0.4) 0%, rgba(238,238,238,0.4) 90%);
+    padding: 4em;
+    color: black;
+    font-size: 1.5rem;
+    text-align: center;
+}
+
+.hero p {
+    font-weight: 600;
+}
+
+#image {
+    display: flex;
+    width: 100%;
+}
+
