--- a/Pages/fcc-tribute/style.css
+++ b/Pages/fcc-tribute/style.css
@@ -9,12 +9,16 @@ html {
     font-family: 'Montserrat', sans-serif;
 }
 
+#main {
+    background: rgba(86,104,91,0.7);
+}
+
 header {
     background-image: linear-gradient(313deg, rgba(86,104,91,0.2) 0%, rgba(122,156,166,0.2) 36%), url("maigret-cover.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    background-color: #839C9C;
+    background-color: rgba(86,104,91,0.7);
     width: 100%;
     height: 100vh;
     display: flex;
@@ -24,7 +28,7 @@ header {
 
 .hero {
     background: linear-gradient(0deg, rgba(255,255,255,0.4) 0%, rgba(238,238,238,0.4) 90%);
-    padding: 4em;
+    padding: 3em;
     color: black;
     font-size: 1.5rem;
     text-align: center;
@@ -34,8 +38,36 @@ header {
     font-weight: 600;
 }
 
-#image {
-    display: flex;
+#img-div {
     width: 100%;
+    margin: 2em auto;
+}
+
+#image {
+    width: 100%;
+    border-radius: 0px;
+    box-shadow: 0px 0px 10px black;
+}
+
+.caption {
+    padding: 0.2em 0;
+    font-weight: 800;
+    text-align: center;
+}
+
+h2 {
+    text-align: center;
+}
+
+ul {
+    background: white;
+    margin: 1em;
+    padding: 2em;
+    list-style: circle;
+    font-family: courier;
+}
+
+li {
+    padding: .3em 0;
 }
 
