--- a/fdcp-4-css_and_javascript_fundamentals/fdcp-4a-css_fundamentals/style_12.css
+++ b/fdcp-4-css_and_javascript_fundamentals/fdcp-4a-css_fundamentals/style_12.css
@@ -1,7 +1,3 @@
-body {
-    font-family: sans-serif;
-}
-
 .card {
     background: #000;
     color: white;
@@ -23,13 +19,20 @@ p {
 }
 
 a {
-    color: #FFE600;
+    color: black;
 }
 
 .button {
-    background: #ffe600;
-    padding: 20px;
+    display: inline-block;
+    background: #FFE600;
     color: black;
+    padding: 15px 30px;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.button:hover {
+    background: orange;
 }
 
 .accent-color {
@@ -37,6 +40,6 @@ a {
 }
 
 .links {
-    margin-top: 40px;
+    margin-top: 0;
     margin-bottom: 0;
 }
