--- a/fdcp-4-css_and_javascript_fundamentals/fdcp-4a-css_fundamentals/style_12.css
+++ b/fdcp-4-css_and_javascript_fundamentals/fdcp-4a-css_fundamentals/style_12.css
@@ -28,6 +28,7 @@ a {
     color: black;
     padding: 15px 30px;
     text-align: center;
+    text-decoration: none;
     margin-bottom: 50px;
 }
 
