--- a/fdcp-4-css_and_javascript_fundamentals/fdcp-4a-css_fundamentals/style_16.css
+++ b/fdcp-4-css_and_javascript_fundamentals/fdcp-4a-css_fundamentals/style_16.css
@@ -1,5 +1,12 @@
+/*
+1 - general
+2 - typography
+
+*/
+
 body {
     font-family: sans-serif;
+    margin: 0;
 }
 
 h1, p {
@@ -18,6 +25,38 @@ a {
     color: #FFE600;
 }
 
-.accent-color {
-    color: #FFE600;
+header,
+section {
+    padding: 50px;
+}
+
+header {
+    background: #FFE600;
+    color: #000;
+}
+
+.section-one {
+    background: black;
+    color: white;
+}
+
+.section-two a {
+    color: black;
+}
+
+.btn {
+    display: inline-block;
+    padding: 15px 30px;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.section-one .btn {
+    background: #FFE600;
+    color: black;
+}
+
+.section-two .btn {
+    background: black;
+    color: white;
 }
