--- a/fdcp-5-responsive_design/fdcp-5a-starting_to_think_responsively/style_1.css
+++ b/fdcp-5-responsive_design/fdcp-5a-starting_to_think_responsively/style_1.css
@@ -1,9 +1,19 @@
 body {
     margin: 0;
-    font-size: 18px;
+    font-size: 10px;
     font-family: 'Lato', sans-serif;
     color: #2e354f;
 }
+
+.section-one {
+    /* font-size: 20px; */
+}
+
+ul {
+    /* 1.5em = 150% */
+    font-size: 1.5em;
+}
+
 
 h1,
 h2,
@@ -14,12 +24,12 @@ strong {
 /* Typography */
 
 h1 {
-    font-size: 36px;
+    font-size: 3em;
     margin: 0;
 }
 
 h2 {
-    font-size: 24px;
+    font-size: 2em;
     color: #ef5839;
 }
 
@@ -73,9 +83,9 @@ section {
 }
 
 .container {
-    width: 80%;
+    width: 620px;
     margin: 0 auto;
-    border: 2px solid magenta;
+    /* border: 2px solid magenta; */
 }
 
 .section-two {
