--- a/fdcp-5-responsive_design/fdcp-5a-starting_to_think_responsively/style_1.css
+++ b/fdcp-5-responsive_design/fdcp-5a-starting_to_think_responsively/style_1.css
@@ -6,11 +6,15 @@ body {
 }
 
 .section-one {
-    /* font-size: 20px; */
+    font-size: 2em;
 }
 
 ul {
     /* 1.5em = 150% */
+    font-size: 1.5em;
+}
+
+li {
     font-size: 1.5em;
 }
 
