--- a/fdcp-5-responsive_design/fdcp-5a-starting_to_think_responsively/style_1.css
+++ b/fdcp-5-responsive_design/fdcp-5a-starting_to_think_responsively/style_1.css
@@ -1,23 +1,17 @@
 body {
     margin: 0;
-    font-size: 10px;
+    font-size: 1rem;
     font-family: 'Lato', sans-serif;
     color: #2e354f;
 }
 
 .section-one {
-    font-size: 2em;
+    font-size: 2rem;
 }
 
 ul {
-    /* 1.5em = 150% */
-    font-size: 1.5em;
+    font-size: 1.5rem;
 }
-
-li {
-    font-size: 1.5em;
-}
-
 
 h1,
 h2,
@@ -28,12 +22,12 @@ strong {
 /* Typography */
 
 h1 {
-    font-size: 3em;
+    font-size: 3rem;
     margin: 0;
 }
 
 h2 {
-    font-size: 2em;
+    font-size: 2rem;
     color: #ef5839;
 }
 
