--- a/fdcp-5-responsive_design/fdcp-5a-starting_to_think_responsively/style_17.css
+++ b/fdcp-5-responsive_design/fdcp-5a-starting_to_think_responsively/style_17.css
@@ -2,6 +2,21 @@ body {
     font-size: 1.125rem;
     color: #707070;
     margin: 0;
+    background: pink;
+}
+
+/* from a minimum width of 400px and bigger */
+@media (min-width: 400px) {
+    body {
+        background: purple;
+    }
+}
+
+/* from a minimum width of 400px and bigger */
+@media (min-width: 650px) {
+    body {
+        background: orange;
+    }
 }
 
 /* Typography */
@@ -39,19 +54,20 @@ img {
 
 .columns {
     display: flex;
+    justify-content: space-between;
     margin: 1em 0;
 }
 
 .col-1 {
-    width: 25%;
+    width: 20%;
 }
 
 .col-2 {
-    width: 50%;
+    width: 45%;
 }
 
 .col-3 {
-    width: 75%;    
+    width: 70%;    
 }
 
 .col-bg {
