--- a/fdcp-5-responsive_design/fdcp-5a-starting_to_think_responsively/style_17.css
+++ b/fdcp-5-responsive_design/fdcp-5a-starting_to_think_responsively/style_17.css
@@ -5,17 +5,17 @@ body {
     background: pink;
 }
 
-/* from a minimum width of 400px and bigger */
-@media (min-width: 400px) {
+/* from a minimum width of 650px and bigger */
+@media (min-width: 500px) {
     body {
-        background: purple;
+        background: orange;
     }
 }
 
-/* from a minimum width of 400px and bigger */
-@media (min-width: 650px) {
+/* from a minimum width of 400px up to a width of 649px */
+@media (min-width: 400px) and (max-width: 649px) {
     body {
-        background: orange;
+        background: purple;
     }
 }
 
