--- a/fdcp-5-responsive_design/fdcp-5a-starting_to_think_responsively/style_21.css
+++ b/fdcp-5-responsive_design/fdcp-5a-starting_to_think_responsively/style_21.css
@@ -4,15 +4,23 @@
     font-family: 'Ubuntu', sans-serif;
  */
  
- nav ul {
+ header {
+    text-align: center;
+}
+
+nav ul {
     border: 1px solid magenta;
     
     list-style: none;
+    padding: 0;
     display: flex;
+    justify-content: center;
 }
 
 nav li {
     border: 2px dotted orange;
+    
+    margin: 0 1em;
 }
 
 nav a {
