--- a/fdcp-5-responsive_design/fdcp-5a-starting_to_think_responsively/fdcp-5a-project-lsl/cdPbGrUr/css/styles.css
+++ b/fdcp-5-responsive_design/fdcp-5a-starting_to_think_responsively/fdcp-5a-project-lsl/cdPbGrUr/css/styles.css
@@ -7,6 +7,7 @@ font-family: 'Ubuntu', sans-serif;
 body {
     margin: 0;
     font-family: 'Ubuntu', sans-serif;
+    font-size: 18px;
 }
 
 /* =================
@@ -99,4 +100,55 @@ nav a:focus {
     nav li {
         margin: .5em 0;
     }
+}
+
+
+/*  */
+
+main {
+    max-width: 1005px;
+    display: flex;
+}
+
+.main {
+    max-width: 714px;
+}
+
+.upfront .blog-img img {
+    width: 100%;
+    height: 308px;
+    object-fit: cover;
+    object-position: 0 100%;
+}
+
+.blog-date {
+    font-family: 'lato', sans-serif;
+    font-size: 0.85rem;
+    color: #707070;
+}
+
+.blog-container h2 {
+    font-family: 'lora', sans-serif;
+    font-size: 1.35em;
+    color: #143774
+}
+
+.blog-text {
+    color: #707070;
+}
+
+.blog-continue {
+    font-size: 0.85rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: 1792D2;
+}
+
+.blog-continue a {
+    text-decoration: none;
+}
+
+.blog-continue a:hover, 
+.blog-continue a:focus {
+
 }
