--- a/fdcp-5-responsive_design/fdcp-5a-starting_to_think_responsively/fdcp-5a-project-lsl/cdPbGrUr/css/styles.css
+++ b/fdcp-5-responsive_design/fdcp-5a-starting_to_think_responsively/fdcp-5a-project-lsl/cdPbGrUr/css/styles.css
@@ -7,27 +7,70 @@ font-family: 'Ubuntu', sans-serif;
 body {
     margin: 0;
     font-family: 'Ubuntu', sans-serif;
-    font-size: 18px;
+    font-size: 1.125rem;
+    font-weight: 300;
 }
 
 /* =================
 Typography
 ================= */
 
-h1 {
+h1, 
+h2,
+h3 {
     font-family: 'Lora', serif;
     font-weight: 400;
     color: #143774;
+}
+
+h1 {
     font-size: 2rem;
     margin: 0;
 }
 
+a {
+    color: #1792d2;
+}
+
+a:hover,
+a:focus {
+    color: #143774;
+}
+
+strong {
+    font-weight: 700;
+}
+
+/* h1 subtitle */
 .subtitle {
     font-weight: 700;
     color: #1792d2;
     font-size: .75rem;
     margin: 0;
 }
+
+.article-title {
+    font-size: 1.5rem;
+}
+
+.article-read-more,
+.article-info {
+    font-size: .875rem;
+}
+
+.article-read-more {
+    color: #1792d2;
+    text-decoration: none;
+    font-weight: 700;
+}
+
+.article-read-more:hover,
+.article-read-more:focus {
+    color: #143774;
+    text-decoration: underline;
+}
+
+
 
 /* =================
 Layout
@@ -100,65 +143,4 @@ nav a:focus {
     nav li {
         margin: .5em 0;
     }
-}
-
-
-/*  */
-
-main {
-    max-width: 1005px;
-    display: flex;
-}
-
-.main {
-    max-width: 714px;
-    min-width: 80%;
-}
-
-.upfront .blog-img img {
-    width: 100%;
-    height: 308px;
-    object-fit: cover;
-    object-position: 0 100%;
-}
-
-.blog-date {
-    font-family: 'lato', sans-serif;
-    font-size: 0.85rem;
-    color: #707070;
-}
-
-.blog-container h2 {
-    font-family: 'lora', sans-serif;
-    font-size: 1.35em;
-    color: #143774
-}
-
-.blog-text {
-    color: #707070;
-}
-
-.blog-continue {
-    font-size: 0.85rem;
-    text-transform: uppercase;
-    font-weight: bold;
-    color: 1792D2;
-}
-
-.blog-continue a {
-    text-decoration: none;
-}
-
-.blog-continue a:hover, 
-.blog-continue a:focus {
-
-}
-
-.blog-card {
-    display: flex;
-    border: 1px solid black;
-}
-
-.card-img .blog-img {
-    width: 100%;
 }
