--- a/fdcp-5-responsive_design/fdcp-5a-starting_to_think_responsively/fdcp-5a-project-lsl/css/styles.css
+++ b/fdcp-5-responsive_design/fdcp-5a-starting_to_think_responsively/fdcp-5a-project-lsl/css/styles.css
@@ -204,6 +204,9 @@ nav a:focus {
     
     .article-image {
         order: -2;
+        min-height: 250px;
+        object-fit: cover;
+        /* object-position: left; */
     }
     
     .article-info {
