--- a/fdcp-5-responsive_design/fdcp-5c-stepping-up-our-style/fdcp-5c-project-bbq/css/style.css
+++ b/fdcp-5-responsive_design/fdcp-5c-stepping-up-our-style/fdcp-5c-project-bbq/css/style.css
@@ -133,25 +133,25 @@ input {
 
     header {
         height: 100%;
-        justify-content: flex-end;
+        /* justify-content: space-between; */
+        justify-content: flex-start;
     }
 
     .header-title {
         background: blue;
+        justify-self: flex-end;
         margin: 0;
         padding: 0;
     }
 
     .header-subtitle {
         background: green;
-        justify-self: start;
         margin: 0;
         padding: 0;
     }
 
     .header-cta {
-        background: white;
-        justify-self: end;
+        background: gray;
         margin: 0;
         padding: 0;
     }
