bbq splash page 1

--- a/fdcp-5-responsive_design/fdcp-5c-stepping-up-our-style/fdcp-5c-project-bbq/css/style_0.css
+++ b/fdcp-5-responsive_design/fdcp-5c-stepping-up-our-style/fdcp-5c-project-bbq/css/style_0.css
@@ -134,12 +134,11 @@ input {
     header {
         height: 100%;
         /* justify-content: space-between; */
-        justify-content: flex-start;
+        align-content: flex-start;
     }
 
     .header-title {
         background: blue;
-        justify-self: flex-end;
         margin: 0;
         padding: 0;
     }
