--- a/fdcp-5-responsive_design/fdcp-5c-stepping-up-our-style/fdcp-5c-project-bbq/css/styles.css
+++ b/fdcp-5-responsive_design/fdcp-5c-stepping-up-our-style/fdcp-5c-project-bbq/css/styles.css
@@ -8,15 +8,22 @@ body {
     text-align: center;
 }
 
+
+/* =================
+   Typography 
+   ================= */
+
 h1 {
     font-size: 2.25rem;
     font-weight: 300;
+    color: #fff;
 }
 
 h1 + p {
     color: #F18119;
     font-weight: 900;
     font-size: 1.3125rem;
+    text-transform: uppercase;
 }
 
 h2 {
@@ -24,16 +31,14 @@ h2 {
 }
 
 h2 + p {
-    color: #F18119;
     font-weight: 900;
-    font-size: 1rem;
-    text-transform: uppercase;
+    color: #F18119;
 }
 
 .top-text {
     font-size: 0.625rem;
-    font-weight: 900;
     color: #F18119;
+    font-weight: 900;
     text-transform: uppercase;
 }
 
@@ -43,3 +48,14 @@ h2 + p {
 }
 
 strong { font-weight: 900; }
+
+
+/* =================
+   Intro section 
+   ================= */
+   
+.intro {
+    background-image: url(../img/dark-ribs.jpg);
+    background-color: #404040;
+    padding: 0 .25em 1em;
+}
