--- a/fdcp-5-responsive_design/fdcp-5c-stepping-up-our-style/fdcp-5c-project-bbq/css/styles.css
+++ b/fdcp-5-responsive_design/fdcp-5c-stepping-up-our-style/fdcp-5c-project-bbq/css/styles.css
@@ -62,7 +62,9 @@ strong { font-weight: 900; }
    
 .intro {
     background-image: url(images/dark-ribs.jpg);
+    background-size: cover;
     background-color: #404040;
+    background-position: center;
     padding: 0 .5em 2em;
     display: flex;
     flex-direction: column;
@@ -85,6 +87,7 @@ strong { font-weight: 900; }
 @media (min-width: 500px) {
     body {
         font-size: 1.125rem;
+        display: flex;
     }
     
     h1 {
@@ -94,6 +97,11 @@ strong { font-weight: 900; }
     h2,
     h1 + p {
         font-size: 1.75rem;
+    }
+    
+    .intro,
+    .main-content {
+        width: 50%;
     }
 }
    
