--- a/fdcp-5-responsive_design/fdcp-5c-stepping-up-our-style/fdcp-5c-project-bbq/css/styles.css
+++ b/fdcp-5-responsive_design/fdcp-5c-stepping-up-our-style/fdcp-5c-project-bbq/css/styles.css
@@ -70,10 +70,6 @@ strong { font-weight: 900; }
     background-color: #404040;
     background-position: center;
     padding: 0 .5em 2em;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    min-height: 50vh;
 }
 
 
@@ -87,12 +83,18 @@ strong { font-weight: 900; }
 
 
 
-.intro > *,
-.main-content > * {
+.container {
     max-width: 400px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
 }
+
+.container-intro {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 50vh;
+}
+
 
 
 /* =================
@@ -124,5 +126,9 @@ strong { font-weight: 900; }
         display: flex;
         flex-direction: column;
         justify-content: center;
+    }
+    
+    .container-intro {
+        height: 100%;
     }
 }
