--- a/fdcp-5-responsive_design/fdcp-5c-stepping-up-our-style/fdcp-5c-project-bbq/css/styles.css
+++ b/fdcp-5-responsive_design/fdcp-5c-stepping-up-our-style/fdcp-5c-project-bbq/css/styles.css
@@ -130,8 +130,12 @@ input {
 }
 
 .btn-primary {
-    background: linear-gradient(to left, #ff713b, #ffa51d);
+    background-image: linear-gradient(to left, #FF713B, #FFA51D);
     color: white;
+}
+
+.btn-primary:hover {
+    
 }
 
 /* =================
