--- a/fdcp-5-responsive_design/fdcp-5c-stepping-up-our-style/fdcp-5c-project-bbq/css/styles.css
+++ b/fdcp-5-responsive_design/fdcp-5c-stepping-up-our-style/fdcp-5c-project-bbq/css/styles.css
@@ -132,10 +132,12 @@ input {
 .btn-primary {
     background-image: linear-gradient(to left, #FF713B, #FFA51D);
     color: white;
+    transform: scale(1);
+    transition: transform 250ms;
 }
 
 .btn-primary:hover {
-    
+    transform: scale(1.1);
 }
 
 /* =================
