--- a/fdcp-5-responsive_design/fdcp-5c-stepping-up-our-style/fdcp-5c-project-bbq/css/styles.css
+++ b/fdcp-5-responsive_design/fdcp-5c-stepping-up-our-style/fdcp-5c-project-bbq/css/styles.css
@@ -116,6 +116,12 @@ input {
     margin-bottom: .75em;
     padding: .25em;
     border: 1px solid #404040;
+    transform: scale(1);
+    transition: transform 250ms;
+}
+
+input:focus {
+    transform: scale(1.1);
 }
 
 .btn {
@@ -136,7 +142,8 @@ input {
     transition: transform 250ms;
 }
 
-.btn-primary:hover {
+.btn-primary:hover,
+.btn-primary:focus {
     transform: scale(1.1);
 }
 
