bbq splash page 36

--- a/fdcp-5-responsive_design/fdcp-5c-stepping-up-our-style/fdcp-5c-project-bbq/css/styles.css
+++ b/fdcp-5-responsive_design/fdcp-5c-stepping-up-our-style/fdcp-5c-project-bbq/css/styles.css
@@ -46,10 +46,14 @@ h2 + p {
 
 .top-text {
     font-size: 0.625rem;
+    margin: 0;
+    padding-top: 2px;
     color: #F18119;
     font-weight: 900;
     text-transform: uppercase;
     order: -1;
+    border-top: 5px solid #F18119;
+    border-image: linear-gradient(to left, #ff713b, #ffa51d) 1;
 }
 
 .fine-print {
