--- a/fdcp-8-Building-apps-with-Flexbox-and-Grid/fdcp-8c-css-grid-the-ultimate-layout-tool/style_7.css
+++ b/fdcp-8-Building-apps-with-Flexbox-and-Grid/fdcp-8c-css-grid-the-ultimate-layout-tool/style_7.css
@@ -56,3 +56,44 @@ body {
   display: block;
   font-size: 1.25em;
 }
+
+/* Ma Solution */
+
+.card {
+  display: grid;
+  grid-template: 100px 100px 100px auto / 200px 200px 200px;
+  border: 4px solid red;
+}
+
+.card-img {
+  grid-column: 1 / 2;
+  grid-row: 1 / 4;
+  border: 4px solid red;
+  width: 100%;
+  height: 100%;
+}
+
+.card-title {
+  grid-row: 2;
+  grid-column: 2 / 4;
+  border: 4px solid red;
+}
+
+.card-body {
+  grid-row: 3;
+  grid-column: 2 / 4;
+  border: 4px solid red;
+}
+
+.card-read-time {
+  grid-row: 3 / 4;
+  grid-column: 2 / 3;
+  border: 4px solid red;
+}
+
+.card-btn {
+  grid-row: 3 / 4;
+  grid-column: 3 / 4;
+  border: 4px solid red;
+}
+
