--- a/fdcp-4-css-and-javascript-fundamentals/fdcp-4c-javascript-challenges/styles_3.css
+++ b/fdcp-4-css-and-javascript-fundamentals/fdcp-4c-javascript-challenges/styles_3.css
@@ -23,3 +23,20 @@ html, body {
     cursor: pointer;
   }
   
+  /** 
+  Modal: #modal
+
+  1) Add a temporary background colour of 'orange'
+  2) Add a padding of 20px
+  3) Add a height of 200px
+  4) Add a margin of 0 & auto to make sure our Modal is centered
+  5) Add a max-width of 600px
+**/
+
+#modal {
+    background: orange;
+    margin: 0 auto;
+    padding: 20px;
+    height: 200px;
+    max-width: 600px;
+}
