--- a/fdcp-4-css-and-javascript-fundamentals/fdcp-4c-javascript-challenges/styles_5.css
+++ b/fdcp-4-css-and-javascript-fundamentals/fdcp-4c-javascript-challenges/styles_5.css
@@ -1,48 +1,5 @@
 html, body {
     margin: 0;
-    padding: 50px;
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
-  }
-  
-  /** 
-    Our buttons '#open-modal, #close-modal' 
-  
-    1) For the background colour use 'royalblue'
-    2) Be aware of the colour, padding & font size
-    3) Make sure the cursor has a pointer so that it demonstrates to the user the button is clickable
-  **/
-
-  #open-modal,
-  #close-modal {
-    display: inline-block;
-    background: royalblue;
-    color: white;
-    font-size: 1.1rem;
-    padding: 1em 2.5em;
-    cursor: pointer;
-  }
-  
-  /** 
-  Modal: #modal
-
-  1) Add a temporary background colour of 'orange'
-  2) Add a padding of 20px
-  3) Add a height of 200px
-  4) Add a margin of 0 & auto to make sure our Modal is centered
-  5) Add a max-width of 600px
-**/
-
-#modal {
-    background: orange;
-    margin: 0 auto;
-    padding: 20px;
-    height: 200px;
-    max-width: 600px;
-}
-
-html, body {
-    margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
   }
@@ -79,6 +36,31 @@ html, body {
     height: 200px;
   }
   
+  /** 
+    Overlay: #overlay
+  
+    1) Add a width and a height of 100%
+    2) Position absolute (allows us to place any element exactly where we want it)
+    3) Set top, left, bottom, right to 0
+    4) Add a background colour of black
+    5) Add position relative to #modal so that it's relative to #overlay
+    6) Put the background of #modal to white (temp background no longer needed)
+    7) Add top: 30% to #modal
+  **/
   #overlay {
     display: none;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: black;
+  }
+
+  #modal {
+      position: relative;
+      background-color: white;
+      top: 30%;
   }
