javascript challenges build a carousel

--- a/fdcp-4-css-and-javascript-fundamentals/fdcp-4c-javascript-challenges/styles_20.css
+++ b/fdcp-4-css-and-javascript-fundamentals/fdcp-4c-javascript-challenges/styles_20.css
@@ -21,7 +21,8 @@ the edges of the slides, but adequately spaced
     position: relative;
 }
 
-.carousel .carousel-item {
+.carousel .carousel-item,
+.carousel .carousel-item-hidden {
     display: none;
 }
 
