fm social proof section challenge

--- a/fm-challenges/social-proof-section-master/styles.css
+++ b/fm-challenges/social-proof-section-master/styles.css
@@ -21,6 +21,19 @@ body {
     display: flex;
 }
 
+.card-img {
+    width: 50px;
+    border-radius: 50%;
+}
+
+.card-title {
+
+}
+
+.card-state {
+
+}
+
 
 
 
