--- a/fm-challenges/social-proof-section-master/styles.css
+++ b/fm-challenges/social-proof-section-master/styles.css
@@ -19,19 +19,28 @@ body {
     padding: 2em;
     border-radius: 10px;
     display: flex;
+    flex-direction: column;
+}
+
+.card-principal {
+    display: flex;
 }
 
 .card-img {
-    width: 50px;
-    border-radius: 50%;
+    border-radius: 30%;
+    padding-right: 1.5em;
 }
 
-.card-title {
-
+.card-box-title {
+    text-align: left;
 }
 
 .card-state {
 
+}
+
+.card-secondary {
+    text-align: left;
 }
 
 
