--- a/fm-challenges/social-proof-section-master/styles.css
+++ b/fm-challenges/social-proof-section-master/styles.css
@@ -13,10 +13,28 @@ body {
     line-height: .95em;
 }
 
+.section1 p {
+    line-height: 1.8em;
+}
+
+.section2-block {
+    margin: 1em 0;
+    padding: 1em 0;
+    background: hsl(300, 24%, 96%);
+}
+
+.img-star {
+    margin-right: 0.8em;
+}
+
+.star-text {
+    font-weight: 700;
+}
+
 .card {
     background: hsl(300, 43%, 22%);
     margin: 1em 0;
-    padding: 2em;
+    padding: 2.5em;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -27,8 +45,11 @@ body {
 }
 
 .card-img {
-    border-radius: 30%;
-    padding-right: 1.5em;
+    display: block;
+    margin: 0;
+    max-height: 60%;
+    border-radius: 50%;
+    margin-left: -0.9em;
 }
 
 .card-box-title {
@@ -36,16 +57,27 @@ body {
 }
 
 .card-title {
-    color: #ffffff;
+    color: hsl(0, 0%, 100%);
     font-size: 1rem;
+    margin: 0;
+    margin-bottom: 0.5em;
 }
 
 .card-state {
-
+    margin: 0;
+    font-size: 1rem;
 }
 
 .card-secondary {
     text-align: left;
+    margin: 0;
+}
+
+.card-text {
+    color: hsl(0, 0%, 100%);
+    line-height: 1.8em;
+    font-size: 1.1rem; 
+    margin: 0;
 }
 
 
