fm social proof section challenge

--- a/fm-challenges/social-proof-section-master/styles.css
+++ b/fm-challenges/social-proof-section-master/styles.css
@@ -104,6 +104,27 @@ body {
         display: flex;
     }
 
+    .block2 {
+        margin-left: 3em;
+    }
+
+    .block3 {
+        margin-left: 5em;
+    }
+
+    .card {
+        margin: 1em;
+    }
+
+    .pos2 {
+        margin-top: 3em;
+    }
+
+    .pos3 {
+        margin-top: 5em;
+    }
+
+
 }
 
 
